# VladBigBrain

./: .gitignore  README.md
Leetcode/Easy/C++/ Find the Index of the First Occurrence in a String/: solution.h
Leetcode/Easy/C++/LongestCommonPrefix/: Solution.h  main.cc
Leetcode/Easy/C++/Merge2sortedlist/: CMakeLists.txt  solve.h  tests.cc
Leetcode/Easy/C++/Palindrome Number/: main.cc  solution.h
Leetcode/Easy/C++/Remove Duplicates from Sorted Array/: Solution.cc
Leetcode/Easy/C++/RomanToInteger/: main.cc  solution.h
Leetcode/Easy/C++/Search Insert Position/: solve.h
Leetcode/Easy/C++/TwoSum/: main.cc  solution.h
Leetcode/Easy/C++/Vadlid Parentheses/: main.cc  solution.h
Leetcode/Easy/C++/tests/: Makefile
MLP/datasets/: 300graph.txt  emnist-letters-mapping.txt
MLP/materials/: perceptron_rus.md
MLP/misc/: main.txt
MLP/src/: Makefile  docs.tex  docs.texi
MLP/src/interfaces/: abstract_layer.h  abstract_neural_network.h  abstract_neuron.h  layer.h  neural_network.h  neuron.h
MLP/src/libraries/: algorithm.h  console.h  io.h  logger.h
MLP/src/libraries/qcustomplot/: qcustomplot.h
MLP/src/model/: graph_perceptron.cc  graph_perceptron.h  layer.cc  layer.h  layer_graph.cc  layer_graph.h  layer_perceptrone.cc  layer_perceptrone.h  neural_network.cc  neural_network.h  neuron.cc  neuron.h  node.cc  node.h  random.h  sigmoid_neuron.h
MLP/src/view/: CMakeLists.txt  controler.cc  controler.h  model.cc  model.h  paintscene.cpp  paintscene.h  view.cpp  view.h  view.ui
MLP/tests/: CMakeLists.txt  model_tests.cc
